--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,121 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/src/assets/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-
-    <style>
-      .header {
-        display: flex;
-        gap: 20px;
-        height: 80px;
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.63);
-      }
-
-      .header-content {
-        display: flex;
-        gap: 20px;
-        height: 100%;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-      }
-
-      .logo {
-        color: rgb(255, 255, 255);
-        font-size: 25px;
-        width: 100%;
-        justify-self: center;
-      }
-
-      .phone {
-        color: rgb(255, 255, 255);
-        margin: 10px;
-      }
-
-      .background-img {
-        background-image: url("/src/components/icons/backgroundImg.jpg");
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-      }
-
-      .linkBox {
-        display: flex;
-        width: 100%;
-        gap: 20px;
-        margin: 10px;
-      }
-
-      .filter-container {
-        padding: 22px;
-      }
-
-      .boking-filter-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 22px;
-        padding: 44px;
-        padding-left: 152px;
-        padding-right: 152px;
-        background-color: rgba(22, 21, 21, 0.87);
-        border-radius: 5px;
-      }
-
-      .boking-search {
-        display: flex;
-        gap: 16px;
-      }
-
-      .booking-label {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-      }
-
-      .button-search {
-        align-self: flex-end;
-      }
-    </style>
   </head>
   <body>
-    <div class="background-img">
-      <header class="header">
-        <div class="header-content">
-          <h1 class="logo">Ясная дача</h1>
-
-          <div class="phone">номер телефона</div>
-        </div>
-      </header>
-
-      <search>
-        <form class="filter-container" @submit.prevent role="search">
-          <div class="boking-filter-container">
-            <h1>Бронирование домиков и комнат</h1>
-
-            <div class="boking-search">
-              <div class="booking-label">
-                <label for="startDate">Заезд</label>
-
-                <input id="startDate" type="date" />
-              </div>
-
-              <div class="booking-label">
-                <label for="endDate"> Выезд</label>
-                <input id="endDate" type="date" />
-              </div>
-
-              <a class="button-search" href="/main">Найти</a>
-            </div>
-          </div>
-        </form>
-      </search>
-    </div>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
